--- a/style.css
+++ b/style.css
@@ -103,5 +103,41 @@ h1{
     font-style: italic;
 }
 
+.create-account{
+    font-size: xx-large;
+    font-weight: bolder;
+}
+
+
+@media only screen and (min-width: 200px) and (max-width: 600px) {
+    .container{
+        width:100%;
+        margin:0%;
+    }
+
+    .image1{
+        position:relative;
+        width:100%;
+        margin:0%;
+    }
+
+    .text{
+        font-size: larger;
+    }
+
+    .image{
+        width:96%;
+        margin:2%;
+        height:600px;
+    }
+
+    .social{
+        width:100%;
+        margin:0%;
+    }
+    .video{
+        width:100%;
+    }
+}
 
 
